# agent-workflow

./: .cbmignore  .gitignore  BACKLOG.md  CHANGELOG.md  IMPLEMENTATION.patch  IMPLEMENTATION_REPORT.md  MANIFEST.sha256  Makefile  README.md  RECOMMENDATIONS.md  SECURITY.md  SESSION_RESTORE.md  VALIDATION.md  agent-workflow.yaml  install.sh  pyproject.toml  uninstall.sh
config/: agent-workflow.example.toml
docs/: AGENT_EVALUATION_IMPROVEMENT_PLAN.md  AGENT_WORKFLOW_SKILL_INTEGRATION_P0.md  ARCHITECTURE.md  CHATGPT_REMAINING_WORK_PROMPT.md  COMMAND_REFERENCE.md  DELEGATION_LIFECYCLE.md  DURABLE_WAKEUP_AND_EVIDENCE_COMPLETION_PLAN.md  Durable_Orchestration_Delivery_Benchmarks.md  INSTALLATION.md  MCP_ADAPTER_PLAN.md  MESSAGING_PRIOR_ART_REPORT.md  MIGRATING_EXISTING_ASSETS.md  MODEL_TIERS.md  ORCHESTRATION_AND_ASYNC_MESSAGING_PLAN.md  ORCHESTRATOR_MESSAGING_AND_EVALS_PLAN.md  PHASE_3_BLOCKED_GATE_REPORT.md  PROMPT_PACK_RUNTIME_INTEGRATION_PLAN.md  PROMPT_PACK_STANDARD.md  ROADMAP.md  STALL_RECOVERY.md  TEST_POLICY.md
evals/: Dockerfile  README.md
schemas/: command-collection.schema.json  command.schema.json  completion-collection.schema.json  completion.schema.json  control-event.schema.json  evaluation-plan.schema.json  execution-metrics.schema.json  final-receipt.schema.json  job-binding.schema.json  lifecycle-receipt.schema.json  native-job.schema.json  pack.schema.json  run-provenance.schema.json  scope-snapshot.schema.json  score-receipt.schema.json  session-status-v2.schema.json  session-status.schema.json  source-baseline.schema.json  task-manifest.schema.json
scripts/: README.md  audit-release-assets.py  release-check.sh  session_status.py  stop-delegation.sh  validate-prompt-pack.sh
scripts.orig/: check-delegation.sh  create-ticket-worktree.sh  foreground-delegation.sh  launch-delegation.sh  session_status.py  stop-delegation.sh
tests/: run_fixtures.py  test_cli_parsing.py  test_config.py  test_contracts.py  test_doctor.py  (+31 more)
(+137 files in other folders)
