[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-workflow"
version = "0.1.0"
description = "Terminal-first, observable workflow for bounded coding-agent delegation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Operating System :: POSIX",
]

[project.scripts]
agent-workflow = "agent_workflow.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agent_workflow = ["assets/**/*"]
